--- a/Post/Base.lproj/Main.storyboard
+++ b/Post/Base.lproj/Main.storyboard
@@ -1187,20 +1187,20 @@
                                                 <constraint firstAttribute="height" constant="75" id="YGe-Ww-S0R"/>
                                             </constraints>
                                         </imageView>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="鲜花" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="y8y-cA-mLL">
-                                            <rect key="frame" x="95" y="20" width="30" height="18"/>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="鲜花" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="y8y-cA-mLL">
+                                            <rect key="frame" x="95" y="20" width="28" height="17"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                             <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="状态：" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LJU-R8-kTU">
-                                            <rect key="frame" x="95" y="48" width="45" height="18"/>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="状态：" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LJU-R8-kTU">
+                                            <rect key="frame" x="95" y="47" width="42" height="17"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                             <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="未知" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0cO-4l-IQI">
-                                            <rect key="frame" x="140" y="48" width="30" height="18"/>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="未知" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0cO-4l-IQI">
+                                            <rect key="frame" x="137" y="47" width="28" height="17"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                             <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                             <nil key="highlightedColor"/>
@@ -1277,8 +1277,8 @@
                                             <color key="textColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                             <nil key="highlightedColor"/>
                                         </label>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="未知" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="C4l-2V-1EL">
-                                            <rect key="frame" x="33" y="5" width="30" height="18"/>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="未知" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="C4l-2V-1EL">
+                                            <rect key="frame" x="33" y="5" width="28" height="17"/>
                                             <constraints>
                                                 <constraint firstAttribute="width" constant="42" id="ubY-BT-Bpt"/>
                                             </constraints>
@@ -1291,8 +1291,8 @@
                                                 </mask>
                                             </variation>
                                         </label>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="未知" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WFV-ar-K5E">
-                                            <rect key="frame" x="33" y="28" width="30" height="18"/>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="未知" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WFV-ar-K5E">
+                                            <rect key="frame" x="33" y="28" width="28" height="17"/>
                                             <constraints>
                                                 <constraint firstAttribute="width" constant="42" id="bM2-Wn-hhy"/>
                                             </constraints>
@@ -1367,14 +1367,14 @@
                                             <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="在2015年3月8号 15：00前送达" lineBreakMode="characterWrap" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mQZ-Lk-Sf6">
-                                            <rect key="frame" x="82" y="8" width="209.5" height="18"/>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="在2015年3月8号 15：00前送达" lineBreakMode="characterWrap" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mQZ-Lk-Sf6">
+                                            <rect key="frame" x="82" y="8" width="196" height="17"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                             <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="1天12小时" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="045-sE-sl8">
-                                            <rect key="frame" x="82" y="36" width="70.5" height="18"/>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="1天12小时" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="045-sE-sl8">
+                                            <rect key="frame" x="82" y="36" width="66" height="17"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                             <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                             <nil key="highlightedColor"/>
@@ -1402,31 +1402,37 @@
                                     <outlet property="remainTimeLB" destination="045-sE-sl8" id="kb8-YX-95U"/>
                                 </connections>
                             </tableViewCell>
-                            <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="Button" id="hTb-Id-beN" customClass="TaskOrderUnfinished_OK_Cell">
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="Images" rowHeight="80" id="hTb-Id-beN" customClass="PhotoGroupTableViewCell">
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="hTb-Id-beN" id="jRu-Ln-vld">
                                     <autoresizingMask key="autoresizingMask"/>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="Button" id="UPk-eR-1Ve" customClass="TaskOrderUnfinished_OK_Cell">
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="UPk-eR-1Ve" id="726-lA-iTR">
+                                    <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Der-ri-0Ap">
-                                            <rect key="frame" x="33" y="7" width="534" height="30"/>
+                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="B6n-cx-w3T">
+                                            <rect key="frame" x="33" y="7.5" width="534" height="29"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                             <state key="normal" title="现在去取货">
                                                 <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                             </state>
                                             <connections>
-                                                <action selector="btnClick:" destination="hTb-Id-beN" eventType="touchUpInside" id="cmr-RH-x1Z"/>
+                                                <action selector="btnClick:" destination="UPk-eR-1Ve" eventType="touchUpInside" id="Yec-Hf-lmR"/>
                                             </connections>
                                         </button>
                                     </subviews>
                                     <constraints>
-                                        <constraint firstAttribute="trailingMargin" secondItem="Der-ri-0Ap" secondAttribute="trailing" constant="25" id="04r-K1-VTp"/>
-                                        <constraint firstItem="Der-ri-0Ap" firstAttribute="leading" secondItem="jRu-Ln-vld" secondAttribute="leadingMargin" constant="25" id="1H0-Bu-ZIa"/>
-                                        <constraint firstAttribute="centerY" secondItem="Der-ri-0Ap" secondAttribute="centerY" id="RgT-fh-xId"/>
-                                        <constraint firstAttribute="centerX" secondItem="Der-ri-0Ap" secondAttribute="centerX" id="YI0-3b-zPL"/>
+                                        <constraint firstAttribute="trailingMargin" secondItem="B6n-cx-w3T" secondAttribute="trailing" constant="25" id="5Mi-yW-A4x"/>
+                                        <constraint firstItem="B6n-cx-w3T" firstAttribute="leading" secondItem="726-lA-iTR" secondAttribute="leadingMargin" constant="25" id="6jn-lb-FFi"/>
+                                        <constraint firstAttribute="centerY" secondItem="B6n-cx-w3T" secondAttribute="centerY" id="9f9-yQ-Xnc"/>
+                                        <constraint firstAttribute="centerX" secondItem="B6n-cx-w3T" secondAttribute="centerX" id="UeQ-kD-eky"/>
                                     </constraints>
                                 </tableViewCellContentView>
                                 <connections>
-                                    <outlet property="funtcionBtn" destination="Der-ri-0Ap" id="M51-0b-fcy"/>
+                                    <outlet property="funtcionBtn" destination="B6n-cx-w3T" id="cWe-nO-Cyr"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
@@ -6626,6 +6632,54 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="81S-ib-7ya" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="4412" y="2848"/>
+        </scene>
+        <!--Verification Photo View Controller-->
+        <scene sceneID="ks4-eT-52X">
+            <objects>
+                <viewController storyboardIdentifier="VerificationPhotoViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="fxW-oi-Kp7" customClass="VerificationPhotoViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="6Do-2y-ljc"/>
+                        <viewControllerLayoutGuide type="bottom" id="M1f-bX-EYO"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="oPO-dD-5t4">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Xd6-Bf-2OO" customClass="PhotoGroupView">
+                                <rect key="frame" x="0.0" y="25" width="600" height="100"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="100" id="vQJ-uc-d4l"/>
+                                </constraints>
+                            </view>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="UqK-d8-QUG">
+                                <rect key="frame" x="36" y="125" width="528" height="30"/>
+                                <state key="normal" title="提交验视照">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="upLoadPhotoClick:" destination="fxW-oi-Kp7" eventType="touchUpInside" id="HhG-dN-hqH"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="trailingMargin" secondItem="UqK-d8-QUG" secondAttribute="trailing" constant="20" id="0MA-JW-Hjr"/>
+                            <constraint firstItem="Xd6-Bf-2OO" firstAttribute="top" secondItem="6Do-2y-ljc" secondAttribute="bottom" constant="5" id="2GJ-9H-iIO"/>
+                            <constraint firstItem="UqK-d8-QUG" firstAttribute="top" secondItem="Xd6-Bf-2OO" secondAttribute="bottom" id="Fiy-Yf-PaE"/>
+                            <constraint firstItem="UqK-d8-QUG" firstAttribute="leading" secondItem="oPO-dD-5t4" secondAttribute="leadingMargin" constant="20" id="JFH-ik-s2F"/>
+                            <constraint firstAttribute="trailing" secondItem="Xd6-Bf-2OO" secondAttribute="trailing" id="dFU-ig-Ojb"/>
+                            <constraint firstItem="Xd6-Bf-2OO" firstAttribute="leading" secondItem="oPO-dD-5t4" secondAttribute="leading" id="p13-c0-h26"/>
+                            <constraint firstAttribute="centerX" secondItem="UqK-d8-QUG" secondAttribute="centerX" id="ynY-dF-F41"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="photoGroupView" destination="Xd6-Bf-2OO" id="Ifd-xr-SLE"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="jye-Ue-7H5" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="5098" y="2848"/>
         </scene>
     </scenes>
     <resources>
