--- a/Post/Base.lproj/Main.storyboard
+++ b/Post/Base.lproj/Main.storyboard
@@ -6633,10 +6633,10 @@
             </objects>
             <point key="canvasLocation" x="4412" y="2848"/>
         </scene>
-        <!--Verification Photo View Controller-->
+        <!--验视照-->
         <scene sceneID="ks4-eT-52X">
             <objects>
-                <viewController storyboardIdentifier="VerificationPhotoViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="fxW-oi-Kp7" customClass="VerificationPhotoViewController" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="VerificationPhotoViewController" title="验视照" useStoryboardIdentifierAsRestorationIdentifier="YES" id="fxW-oi-Kp7" customClass="VerificationPhotoViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="6Do-2y-ljc"/>
                         <viewControllerLayoutGuide type="bottom" id="M1f-bX-EYO"/>
@@ -6679,7 +6679,158 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="jye-Ue-7H5" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="5098" y="2848"/>
+            <point key="canvasLocation" x="5054" y="2848"/>
+        </scene>
+        <!--确认送达-->
+        <scene sceneID="KzD-dx-Cez">
+            <objects>
+                <viewController storyboardIdentifier="VerifyDeliveryViewController" title="确认送达" useStoryboardIdentifierAsRestorationIdentifier="YES" id="vfM-dz-fgT" customClass="VerifyDeliveryViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="Vxm-qK-Vmn"/>
+                        <viewControllerLayoutGuide type="bottom" id="fb3-Up-jXS"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="DlO-nm-IuK">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="qhl-Y5-pXE">
+                                <rect key="frame" x="0.0" y="260" width="600" height="300"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mFy-y3-nTD">
+                                        <rect key="frame" x="10" y="8" width="580" height="30"/>
+                                        <color key="backgroundColor" red="0.1176470588" green="0.69019607839999997" blue="0.98823529409999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <state key="normal" title="确认送达">
+                                            <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                            <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="verifyDeliveryClick:" destination="vfM-dz-fgT" eventType="touchUpInside" id="kjx-ps-p7B"/>
+                                        </connections>
+                                    </button>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ic_add_pic_normal.png" translatesAutoresizingMaskIntoConstraints="NO" id="NKT-Pa-vOD">
+                                        <rect key="frame" x="250" y="48" width="100" height="100"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="100" id="6bY-su-CY1"/>
+                                            <constraint firstAttribute="height" constant="100" id="W7D-2S-36j"/>
+                                        </constraints>
+                                    </imageView>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="收件人用全民乐递APP扫描上面的二维码，也可以完成签收。" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HoI-Z9-ZWV">
+                                        <rect key="frame" x="20" y="163" width="560" height="17"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="centerX" secondItem="mFy-y3-nTD" secondAttribute="centerX" id="5F0-En-o7W"/>
+                                    <constraint firstItem="mFy-y3-nTD" firstAttribute="leading" secondItem="qhl-Y5-pXE" secondAttribute="leading" constant="10" id="802-Gy-rgw"/>
+                                    <constraint firstItem="mFy-y3-nTD" firstAttribute="top" secondItem="qhl-Y5-pXE" secondAttribute="top" constant="8" id="9PC-rJ-ixZ"/>
+                                    <constraint firstItem="NKT-Pa-vOD" firstAttribute="top" secondItem="mFy-y3-nTD" secondAttribute="bottom" constant="10" id="D9K-LU-Xyb"/>
+                                    <constraint firstItem="HoI-Z9-ZWV" firstAttribute="top" secondItem="NKT-Pa-vOD" secondAttribute="bottom" constant="15" id="KKB-zb-hIi"/>
+                                    <constraint firstAttribute="centerX" secondItem="HoI-Z9-ZWV" secondAttribute="centerX" id="N9W-SJ-YSq"/>
+                                    <constraint firstAttribute="trailing" secondItem="HoI-Z9-ZWV" secondAttribute="trailing" constant="20" id="X10-hl-Flv"/>
+                                    <constraint firstAttribute="trailing" secondItem="mFy-y3-nTD" secondAttribute="trailing" constant="10" id="YEb-7v-aNq"/>
+                                    <constraint firstItem="HoI-Z9-ZWV" firstAttribute="leading" secondItem="qhl-Y5-pXE" secondAttribute="leading" constant="20" id="f0z-iH-GDQ"/>
+                                    <constraint firstAttribute="centerX" secondItem="NKT-Pa-vOD" secondAttribute="centerX" id="zsd-uP-n7Z"/>
+                                </constraints>
+                            </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="f76-ME-oWM">
+                                <rect key="frame" x="0.0" y="20" width="600" height="240"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="操作说明：" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hjg-nz-tHA">
+                                        <rect key="frame" x="10" y="10" width="70" height="17"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="1、点击“发送”，系统将发送验证码到收件人手机上；" lineBreakMode="characterWrap" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JCf-rw-YUz">
+                                        <rect key="frame" x="10" y="35" width="580" height="17"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="2、将收件人收到的验证码输入在下面的输入框中；" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pZh-Od-BqG">
+                                        <rect key="frame" x="10" y="60" width="316" height="17"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="3、点击“确认送达”即可签收完毕。" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1CK-II-IvP">
+                                        <rect key="frame" x="10" y="85" width="216.5" height="17"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="验证码" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="0w8-x5-CVW">
+                                        <rect key="frame" x="10" y="133" width="470" height="30"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="GMA-VN-pfu">
+                                        <rect key="frame" x="500" y="133" width="80" height="30"/>
+                                        <color key="backgroundColor" red="0.1176470588" green="0.69019607839999997" blue="0.98823529409999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="80" id="T0F-gK-oHk"/>
+                                        </constraints>
+                                        <state key="normal" title="发送">
+                                            <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                            <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="sendAuthCodeClick:" destination="vfM-dz-fgT" eventType="touchUpInside" id="isa-30-v8u"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstItem="JCf-rw-YUz" firstAttribute="top" secondItem="hjg-nz-tHA" secondAttribute="bottom" constant="8" id="C71-FP-aWe"/>
+                                    <constraint firstItem="0w8-x5-CVW" firstAttribute="top" secondItem="GMA-VN-pfu" secondAttribute="top" id="K0G-HR-Rlx"/>
+                                    <constraint firstItem="JCf-rw-YUz" firstAttribute="leading" secondItem="hjg-nz-tHA" secondAttribute="leading" id="KDm-lq-b6r"/>
+                                    <constraint firstItem="1CK-II-IvP" firstAttribute="top" secondItem="pZh-Od-BqG" secondAttribute="bottom" constant="8" id="Vd1-B9-vzQ"/>
+                                    <constraint firstItem="hjg-nz-tHA" firstAttribute="top" secondItem="f76-ME-oWM" secondAttribute="top" constant="10" id="XuM-9l-hcC"/>
+                                    <constraint firstItem="hjg-nz-tHA" firstAttribute="leading" secondItem="f76-ME-oWM" secondAttribute="leading" constant="10" id="Y5L-A4-gqV"/>
+                                    <constraint firstItem="0w8-x5-CVW" firstAttribute="top" secondItem="1CK-II-IvP" secondAttribute="bottom" constant="31" id="cHQ-EZ-aeS"/>
+                                    <constraint firstAttribute="trailing" secondItem="JCf-rw-YUz" secondAttribute="trailing" constant="10" id="dyQ-Sm-QFd"/>
+                                    <constraint firstAttribute="trailing" secondItem="GMA-VN-pfu" secondAttribute="trailing" constant="20" id="em8-fj-Vx5"/>
+                                    <constraint firstItem="1CK-II-IvP" firstAttribute="leading" secondItem="0w8-x5-CVW" secondAttribute="leading" id="gw9-dm-clM"/>
+                                    <constraint firstItem="pZh-Od-BqG" firstAttribute="leading" secondItem="1CK-II-IvP" secondAttribute="leading" id="mF7-ds-s8i"/>
+                                    <constraint firstItem="pZh-Od-BqG" firstAttribute="leading" secondItem="JCf-rw-YUz" secondAttribute="leading" id="oVn-lb-whh"/>
+                                    <constraint firstItem="pZh-Od-BqG" firstAttribute="top" secondItem="JCf-rw-YUz" secondAttribute="bottom" constant="8" id="qe5-yd-qMA"/>
+                                    <constraint firstItem="GMA-VN-pfu" firstAttribute="leading" secondItem="0w8-x5-CVW" secondAttribute="trailing" constant="20" id="ry2-Hj-E4o"/>
+                                </constraints>
+                            </view>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="f76-ME-oWM" secondAttribute="trailing" id="BxA-dt-B7d"/>
+                            <constraint firstItem="f76-ME-oWM" firstAttribute="leading" secondItem="DlO-nm-IuK" secondAttribute="leading" id="Etq-u8-Fky"/>
+                            <constraint firstItem="qhl-Y5-pXE" firstAttribute="leading" secondItem="DlO-nm-IuK" secondAttribute="leading" id="RX5-ti-ZoJ"/>
+                            <constraint firstItem="fb3-Up-jXS" firstAttribute="top" secondItem="qhl-Y5-pXE" secondAttribute="bottom" id="Sua-MC-jGV"/>
+                            <constraint firstAttribute="trailing" secondItem="qhl-Y5-pXE" secondAttribute="trailing" id="Ve1-VH-3Qb"/>
+                            <constraint firstItem="f76-ME-oWM" firstAttribute="top" secondItem="DlO-nm-IuK" secondAttribute="topMargin" id="esO-6J-vHP"/>
+                            <constraint firstItem="f76-ME-oWM" firstAttribute="top" secondItem="DlO-nm-IuK" secondAttribute="top" id="esv-Of-KOP"/>
+                            <constraint firstItem="qhl-Y5-pXE" firstAttribute="top" secondItem="f76-ME-oWM" secondAttribute="bottom" id="lKw-My-200"/>
+                            <constraint firstItem="f76-ME-oWM" firstAttribute="height" secondItem="DlO-nm-IuK" secondAttribute="height" multiplier="0.4" id="pSS-8X-1MQ"/>
+                            <constraint firstItem="f76-ME-oWM" firstAttribute="top" secondItem="Vxm-qK-Vmn" secondAttribute="bottom" id="rhH-eL-0ee"/>
+                            <constraint firstItem="qhl-Y5-pXE" firstAttribute="height" secondItem="DlO-nm-IuK" secondAttribute="height" multiplier="0.5" id="xWr-LY-fmD"/>
+                        </constraints>
+                        <variation key="default">
+                            <mask key="constraints">
+                                <exclude reference="esO-6J-vHP"/>
+                                <exclude reference="esv-Of-KOP"/>
+                                <exclude reference="Sua-MC-jGV"/>
+                            </mask>
+                        </variation>
+                    </view>
+                    <connections>
+                        <outlet property="AuthCodeTF" destination="0w8-x5-CVW" id="Y9q-ov-zmK"/>
+                        <outlet property="QRCodeImageView" destination="NKT-Pa-vOD" id="yad-19-rJR"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="DXv-Xg-q4v" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="5686" y="2848"/>
         </scene>
     </scenes>
     <resources>
@@ -6691,6 +6842,7 @@
         <image name="CardID.jpg" width="400" height="265"/>
         <image name="avatar_default.png" width="100" height="100"/>
         <image name="bg.png" width="720" height="1280"/>
+        <image name="ic_add_pic_normal.png" width="180" height="180"/>
         <image name="ic_call_normal.png" width="96" height="96"/>
         <image name="ic_call_pressed.png" width="96" height="96"/>
         <image name="ic_code.png" width="96" height="96"/>
