--- a/Post/Base.lproj/Main.storyboard
+++ b/Post/Base.lproj/Main.storyboard
@@ -2179,6 +2179,121 @@
             </objects>
             <point key="canvasLocation" x="4043" y="3653"/>
         </scene>
+        <!--View Controller-->
+        <scene sceneID="22Q-7U-RB3">
+            <objects>
+                <viewController id="5c2-hO-tyr" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="bvJ-Zl-LmV"/>
+                        <viewControllerLayoutGuide type="bottom" id="8g4-e8-Ygg"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="GTb-2k-m93">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="8Pr-bI-lv8" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-889" y="300"/>
+        </scene>
+        <!--设置中转信息-->
+        <scene sceneID="ojU-NN-12y">
+            <objects>
+                <tableViewController storyboardIdentifier="TransferInfoViewController" title="设置中转信息" useStoryboardIdentifierAsRestorationIdentifier="YES" id="aL7-TM-nst" customClass="TransferInfoViewController" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="static" style="grouped" separatorStyle="default" rowHeight="44" sectionHeaderHeight="10" sectionFooterHeight="10" id="1x5-ac-Dp9">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
+                        <sections>
+                            <tableViewSection headerTitle="您能送到哪里？" id="gzg-yS-ZV0">
+                                <cells>
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="64" id="r0f-Y5-9jM">
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="r0f-Y5-9jM" id="U9L-mD-BvD">
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="中转站：" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EAq-tU-E5T">
+                                                    <rect key="frame" x="8" y="22" width="60" height="18"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="点击选择中转站" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Xz4-rZ-mrb">
+                                                    <rect key="frame" x="73" y="0.0" width="514" height="63.5"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstAttribute="centerY" secondItem="EAq-tU-E5T" secondAttribute="centerY" id="5MO-EC-qkk"/>
+                                                <constraint firstItem="Xz4-rZ-mrb" firstAttribute="leading" secondItem="EAq-tU-E5T" secondAttribute="trailing" constant="5" id="85q-Gn-2QO"/>
+                                                <constraint firstItem="Xz4-rZ-mrb" firstAttribute="top" secondItem="U9L-mD-BvD" secondAttribute="top" id="Yh9-K1-UMG"/>
+                                                <constraint firstItem="EAq-tU-E5T" firstAttribute="leading" secondItem="U9L-mD-BvD" secondAttribute="leadingMargin" id="c4V-rq-SqQ"/>
+                                                <constraint firstAttribute="centerY" secondItem="Xz4-rZ-mrb" secondAttribute="centerY" id="m1y-LS-jps"/>
+                                                <constraint firstAttribute="trailingMargin" secondItem="Xz4-rZ-mrb" secondAttribute="trailing" constant="5" id="pWV-Wn-LMR"/>
+                                                <constraint firstAttribute="bottom" secondItem="Xz4-rZ-mrb" secondAttribute="bottom" id="upZ-Gv-hMk"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <segue destination="5c2-hO-tyr" kind="show" id="uI8-hq-QHg"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </cells>
+                            </tableViewSection>
+                            <tableViewSection headerTitle="您能什么时候送到？" id="kK6-iH-ZJm">
+                                <cells>
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="64" id="bxD-6N-LFL">
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="bxD-6N-LFL" id="hc0-Vo-vZU">
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="时间：" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4YY-9l-xu1">
+                                                    <rect key="frame" x="8" y="22" width="45" height="18"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ORc-oj-UHW">
+                                                    <rect key="frame" x="58" y="0.0" width="529" height="63.5"/>
+                                                    <state key="normal" title="2015-04-30 16:44">
+                                                        <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                                    </state>
+                                                    <connections>
+                                                        <action selector="timePickerClick:" destination="aL7-TM-nst" eventType="touchUpInside" id="Psf-LP-d2n"/>
+                                                    </connections>
+                                                </button>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="ORc-oj-UHW" firstAttribute="leading" secondItem="4YY-9l-xu1" secondAttribute="trailing" constant="5" id="2Uf-Vq-Snv"/>
+                                                <constraint firstItem="ORc-oj-UHW" firstAttribute="top" secondItem="hc0-Vo-vZU" secondAttribute="top" id="HPP-gO-dbQ"/>
+                                                <constraint firstAttribute="centerY" secondItem="4YY-9l-xu1" secondAttribute="centerY" id="jie-ft-7rh"/>
+                                                <constraint firstAttribute="trailingMargin" secondItem="ORc-oj-UHW" secondAttribute="trailing" constant="5" id="mKy-on-YDl"/>
+                                                <constraint firstAttribute="centerY" secondItem="ORc-oj-UHW" secondAttribute="centerY" id="peZ-sK-nYF"/>
+                                                <constraint firstAttribute="bottom" secondItem="ORc-oj-UHW" secondAttribute="bottom" id="smZ-jl-S4d"/>
+                                                <constraint firstItem="4YY-9l-xu1" firstAttribute="leading" secondItem="hc0-Vo-vZU" secondAttribute="leadingMargin" id="uvq-ge-RnQ"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </cells>
+                            </tableViewSection>
+                        </sections>
+                        <connections>
+                            <outlet property="dataSource" destination="aL7-TM-nst" id="I6s-cT-u9H"/>
+                            <outlet property="delegate" destination="aL7-TM-nst" id="nCt-HB-cMz"/>
+                        </connections>
+                    </tableView>
+                    <connections>
+                        <outlet property="choseTransfer" destination="Xz4-rZ-mrb" id="2jV-nH-mQI"/>
+                        <outlet property="timePickerBtn" destination="ORc-oj-UHW" id="jch-Wf-8Nn"/>
+                        <outlet property="transferCell" destination="r0f-Y5-9jM" id="mn1-1Z-h0C"/>
+                    </connections>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="PfQ-69-Cde" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-245" y="297"/>
+        </scene>
         <!--周边-->
         <scene sceneID="Qvj-TZ-QGk">
             <objects>
